--- a/index.html
+++ b/index.html
@@ -29,15 +29,149 @@
     </header>
     <main class="conteudo">
         <div class="container-div">
-           <div class="card"><button>ver mais</button></div>
-           <div class="card"><button>ver mais</button></div>
-           <div class="card"><button>ver mais</button></div>
-           <div class="card"><button>ver mais</button></div>
-           <div class="card"><button>ver mais</button></div>
-           <div class="card"><button>ver mais</button></div>
-           <div class="card"><button>ver mais</button></div>
-           <div class="card"><button>ver mais</button></div>
-           <div class="card"><button>ver mais</button></div>
+           <div class="card">
+                <div class="image">
+                    <img src="img/couch.jpg" alt="">
+                </div>
+
+            <button>ver mais</button>
+        </div>
+        <div class="container-div">
+           <div class="card">
+                <div class="image">
+                    <img src="img/couch.jpg" alt="">
+                </div>
+
+            <button>ver mais</button>
+        </div>
+        <div class="container-div">
+           <div class="card">
+                <div class="image">
+                    <img src="img/couch.jpg" alt="">
+                </div>
+
+            <button>ver mais</button>
+        </div>
+        <div class="container-div">
+           <div class="card">
+                <div class="image">
+                    <img src="img/couch.jpg" alt="">
+                </div>
+
+            <button>ver mais</button>
+        </div>
+        <div class="container-div">
+           <div class="card">
+                <div class="image">
+                    <img src="img/couch.jpg" alt="">
+                </div>
+
+            <button>ver mais</button>
+        </div>
+        <div class="container-div">
+           <div class="card">
+                <div class="image">
+                    <img src="img/couch.jpg" alt="">
+                </div>
+
+            <button>ver mais</button>
+        </div>
+        <div class="container-div">
+           <div class="card">
+                <div class="image">
+                    <img src="img/couch.jpg" alt="">
+                </div>
+
+            <button>ver mais</button>
+        </div>
+        <div class="container-div">
+           <div class="card">
+                <div class="image">
+                    <img src="img/couch.jpg" alt="">
+                </div>
+
+            <button>ver mais</button>
+        </div>
+        <div class="container-div">
+           <div class="card">
+                <div class="image">
+                    <img src="img/couch.jpg" alt="">
+                </div>
+
+            <button>ver mais</button>
+        </div>
+        <div class="container-div">
+           <div class="card">
+                <div class="image">
+                    <img src="img/couch.jpg" alt="">
+                </div>
+
+            <button>ver mais</button>
+        </div>
+        <div class="container-div">
+           <div class="card">
+                <div class="image">
+                    <img src="img/couch.jpg" alt="">
+                </div>
+
+            <button>ver mais</button>
+        </div>
+        <div class="container-div">
+           <div class="card">
+                <div class="image">
+                    <img src="img/couch.jpg" alt="">
+                </div>
+
+            <button>ver mais</button>
+        </div>
+        <div class="container-div">
+           <div class="card">
+                <div class="image">
+                    <img src="img/couch.jpg" alt="">
+                </div>
+
+            <button>ver mais</button>
+        </div>
+        <div class="container-div">
+           <div class="card">
+                <div class="image">
+                    <img src="img/couch.jpg" alt="">
+                </div>
+
+            <button>ver mais</button>
+        </div>
+        <div class="container-div">
+           <div class="card">
+                <div class="image">
+                    <img src="img/couch.jpg" alt="">
+                </div>
+
+            <button>ver mais</button>
+        </div>
+        <div class="container-div">
+           <div class="card">
+                <div class="image">
+                    <img src="img/couch.jpg" alt="">
+                </div>
+
+            <button>ver mais</button>
+        </div>
+        <div class="container-div">
+           <div class="card">
+                <div class="image">
+                    <img src="img/couch.jpg" alt="">
+                </div>
+
+            <button>ver mais</button>
+        </div>
+        <div class="container-div">
+           <div class="card">
+                <div class="image">
+                    <img src="img/couch.jpg" alt="">
+                </div>
+
+            <button>ver mais</button>
+        </div>
         </div>
     </main>
 </body>
